# ckanext-openapi

./: .gitignore  404.html  CHANGELOG.md  MANIFEST.in  README.md  dev-requirements.txt  docker-compose.yml  index.html  mkdocs.yml  setup.cfg  setup.py  sitemap.xml  test.ini
.github/workflows/: mkdocs.yml  test.yml
changelog/: index.html
ckanext/openapi/: config_declaration.yml  helpers.py  plugin.py  utils.py  views.py
ckanext/openapi/assets/: webassets.yml
ckanext/openapi/assets/css/swagger/: lang.css
ckanext/openapi/assets/js/modules/: openapi.js
ckanext/openapi/config/: __init__.py  default.py
ckanext/openapi/i18n/: ckanext-openapi.pot  ckanext-schemingdcat.pot
ckanext/openapi/i18n/es/LC_MESSAGES/: ckanext-openapi.mo  ckanext-openapi.po
ckanext/openapi/public/static/openapi/: canadaapi.yaml  ckan.yaml  datastore.json  datastore.yaml
ckanext/openapi/templates/: header.html
ckanext/openapi/templates/openapi/: index.html  openapi_endpoint.html
ckanext/openapi/tests/: test_helpers.py  test_plugin.py  test_utils.py  test_views.py
docker/: Dockerfile
docs/: index.md
docs/tools/: README.md  config_declaration_to_md.py
docs/tools/output/: configuration.md
docs/v1/: configuration.md  dev-mkdocs.md  dev-translations.md  getting-started.md  tests.md
search/: search_index.json
tools/: index.html
tools/output/configuration/: index.html
v1/configuration/: index.html
v1/dev-changelog/: index.html
v1/dev-mkdocs/: index.html
v1/dev-translations/: index.html
v1/getting-started/: index.html
v1/tests/: index.html
