[metadata]
name = ckanext-openapi
version = 1.0.0
description = An extension to integrate documentation of the CKAN and Datastore APIs, providing Swagger UI support in the OpenAPI 2.0.0 and 3.0.0 standards.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mjanez/ckanext-openapi
author = mjanez
author_email = mnl.janez@gmail.com
license = AGPL
classifiers =
            Development Status :: 4 - Beta
            License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
            Programming Language :: Python :: 3.7
            Programming Language :: Python :: 3.8
            Programming Language :: Python :: 3.9
            Programming Language :: Python :: 3.10
keywords = CKAN ckanext-openapi openapi swagger api documentation

[options]
packages = find:
namespace_packages = ckanext
install_requires =
include_package_data = True

[options.entry_points]
ckan.plugins =
             openapi = ckanext.openapi.plugin:OpenapiPlugin

babel.extractors =
                 ckan = ckan.lib.extract:extract_ckan

[options.extras_require]

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/openapi/i18n/ckanext-openapi.pot
width = 80

[init_catalog]
domain = ckanext-openapi
input_file = ckanext/openapi/i18n/ckanext-openapi.pot
output_dir = ckanext/openapi/i18n

[update_catalog]
domain = ckanext-openapi
input_file = ckanext/openapi/i18n/ckanext-openapi.pot
output_dir = ckanext/openapi/i18n
previous = true

[compile_catalog]
domain = ckanext-openapi
directory = ckanext/openapi/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning
addopts = --ckan-ini test.ini
